codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_parallel_reviews_render_aggregate_status.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 9336
expression: rendered
---
• Reviewing 2 approval requests (0s • esc to interrupt)
  └ • rm -rf '/tmp/guardian target 1'
    • rm -rf '/tmp/guardian target 2'


› 让 Codex 处理任何事情

  ? for shortcuts                                    100% context left
