codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: exec_blob
---
• 已执行 sleep 1
  └ (no output)
