codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupted_turn_error_message.snap
---
source: tui/src/chatwidget/tests.rs
expression: last
---
■ 对话已中断——请告诉模型接下来该如何调整。若出现问题，可使用 `/feedback` 反馈。
